--- a/static/index.html
+++ b/static/index.html
@@ -58,13 +58,6 @@
                             "email": "kane@kanecorp.com",
                             "phone": "+11234567788",
                             "contacted": false
-                        },
-                        "5": {
-                            "name": "Casey",
-                            "role": "COO",
-                            "email": "casey@ccc.com",
-                            "phone": "+11234567777",
-                            "contacted": true
                         }
                     }
                 </code>
@@ -101,7 +94,7 @@
                 <code>
                     curl -X POST http://localhost:3000/customers \
                     -H 'Content-Type: application/json' \
-                    -d '{"5": {"name":"Edwards","role":"Director of IT","email":"edwards@it.com","phone":"+11234567788","contacted":false}}'
+                    -d '{"name":"Edwards","role":"Director of IT","email":"edwards@it.com","phone":"+11234567788","contacted":false}'
                 </code><br>
                 </pre>
                 <b><em>Returns - </em></b> All Existing Customer<br>
@@ -156,7 +149,7 @@
                 <code>
                     curl -X PUT http://localhost:3000/customers/4 \
                     -H 'Content-Type: application/json' \
-                    -d '{"4": {"name":"Edwards","role":"Director of IT","email":"edwards@it.com","phone":"+11234567788","contacted":false}}'
+                    -d '{"name":"Edwards","role":"Director of IT","email":"edwards@it.com","phone":"+11234567788","contacted":false}'
                 </code><br>
                 </pre>
                 <b><em>Returns - </em></b> All Existing Customer<br>
@@ -225,16 +218,9 @@
                             "contacted": true
                         },
                         "4": {
-                            "name": "Edwards",
-                            "role": "Director of IT",
-                            "email": "edwards@it.com",
-                            "phone": "+11234567788",
-                            "contacted": false
-                        },
-                        "5": {
-                            "name": "Edwards",
-                            "role": "Director of IT",
-                            "email": "edwards@it.com",
+                            "name": "Kane",
+                            "role": "CTO",
+                            "email": "kane@kanecorp.com",
                             "phone": "+11234567788",
                             "contacted": false
                         }
